@@ -5,14 +5,14 @@
  * SPDX-License-Identifier: BSD-2-clause
  */
 
-#include "../include/gpsd_config.h"  /* must be before all includes */
+#include "../include/gpsd_config.h"  // must be before all includes
 
 #include <assert.h>
 #include <math.h>
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
-#include <strings.h>   /* for strcasecmp() */
+#include <strings.h>   // for strcasecmp()
 
 #include "../include/gps.h"
 #include "../include/gpsdclient.h"
@@ -21,13 +21,13 @@
 static struct exportmethod_t exportmethods[] = {
 #if defined(DBUS_EXPORT_ENABLE)
     {"dbus", GPSD_DBUS_EXPORT, "DBUS broadcast"},
-#endif /* defined(DBUS_EXPORT_ENABLE) */
+#endif  // defined(DBUS_EXPORT_ENABLE)
 #ifdef SHM_EXPORT_ENABLE
     {"shm", GPSD_SHARED_MEMORY, "shared memory"},
-#endif /* SOCKET_EXPORT_ENABLE */
+#endif  // SOCKET_EXPORT_ENABLE
 #ifdef SOCKET_EXPORT_ENABLE
     {"sockets", NULL, "JSON via sockets"},
-#endif /* SOCKET_EXPORT_ENABLE */
+#endif  // SOCKET_EXPORT_ENABLE
 };
 
 /* convert value of double degrees to a buffer.
@@ -84,35 +84,36 @@ char *deg_to_str2(enum deg_str_type type, double f,
      * Intel trying to kill off round to nearest even. */
     switch (type) {
     default:
-        /* huh? */
+        // huh?
         type = deg_dd;
-        /* It's not worth battling fallthrough warnings just for two lines */
-        f += 0.5 * 1e-8;              /* round up */
+        // It's not worth battling fallthrough warnings just for two lines
+        f += 0.5 * 1e-8;              // round up
         break;
     case deg_dd:
         /* DD.dddddddd */
-        f += 0.5 * 1e-8;              /* round up */
+        f += 0.5 * 1e-8;              // round up
         break;
     case deg_ddmm:
         /* DD MM.mmmmmm */
-        f += (0.5 * 1e-6) / 60;       /* round up */
+        f += (0.5 * 1e-6) / 60;       // round up
         break;
     case deg_ddmmss:
-        f += (0.5 * 1e-5) / 3600;     /* round up */
+        f += (0.5 * 1e-5) / 3600;     // round up
         break;
     }
     fmin = modf(f, &fdeg);
     deg = (int)fdeg;
     if (360 == deg) {
-        /* fix round-up roll-over */
+        // fix round-up roll-over
         deg = 0;
         fmin = 0.0;
     }
 
     if (deg_dd == type) {
-        /* DD.dddddddd */
+        // DD.dddddddd
         long frac_deg = (long)(fmin * 100000000.0);
-        /* cm level accuracy requires the %08ld */
+        // cm level accuracy requires the %08ld
+        // FIXME: NEO-F9P reports to 0.1mm
         (void)snprintf(buf, buf_size, "%3d.%08ld%s", deg, frac_deg, suffix);
         return buf;
     }
@@ -121,13 +122,13 @@ char *deg_to_str2(enum deg_str_type type, double f,
     min = (int)fmin;
 
     if (deg_ddmm == type) {
-        /* DD MM.mmmmmm */
+        // DD MM.mmmmmm
         sec = (int)(fsec * 1000000.0);
         (void)snprintf(buf, buf_size, "%3d %02d.%06d'%s", deg, min, sec,
                        suffix);
         return buf;
     }
-    /* else DD MM SS.sss */
+    // else DD MM SS.sss
     fdsec = modf(fsec * 60.0, &fsec);
     sec = (int)fsec;
     dsec = (int)(fdsec * 100000.0);
@@ -205,71 +206,93 @@ enum unit gpsd_units(void)
         if (0 == strcasecmp(envu, "metric")) {
             return metric;
         }
-        /* unrecognized, ignore it */
+        // unrecognized, ignore it
     }
-    if (((envu = getenv("LC_MEASUREMENT")) != NULL && *envu != '\0')
-        || ((envu = getenv("LANG")) != NULL && *envu != '\0')) {
+    if (((envu = getenv("LC_MEASUREMENT")) != NULL && *envu != '\0') ||
+        ((envu = getenv("LANG")) != NULL && *envu != '\0')) {
         if (strncasecmp(envu, "en_US", 5) == 0
             || strcasecmp(envu, "C") == 0 || strcasecmp(envu, "POSIX") == 0) {
             return imperial;
         }
-        /* Other, must be metric */
+        // Other, must be metric
         return metric;
     }
-    /* TODO: allow a compile time default here */
+    // TODO: allow a compile time default here
     return unspecified;
 }
 
-// standard parsing of a GPS data source spec
+/* standard parsing of a GPS data source spec
+ * arg can be:
+ *     enpty
+ * a gpsd erver
+ *     "server[:port[:device]]"
+ *         server can be an IPv6 address in []
+ * or:
+ *     "/dev/XXX" short cut for "::/dev/ttyXX"
+ *
+ * If arg is NULL, use "localhost:2947"
+ */
 void gpsd_source_spec(const char *arg, struct fixsource_t *source)
 {
-    // the casts attempt to head off a -Wwrite-strings warning
-    source->server = (char *)"localhost";
-    source->port = (char *)DEFAULT_GPSD_PORT;
-    source->device = NULL;
+    char *server, *colon1, *colon2, *skipto, *rbrk;
 
-    if (arg != NULL) {
-        char *colon1, *skipto, *rbrk;
-        source->spec = (char *)arg;
-        assert(source->spec != NULL);
+    memset(source, 0, sizeof(struct fixsource_t));
+    source->server = "localhost";
+    source->port = DEFAULT_GPSD_PORT;
 
-        skipto = source->spec;
-        if (*skipto == '[' && (rbrk = strchr(skipto, ']')) != NULL) {
-            skipto = rbrk;
-        }
-        colon1 = strchr(skipto, ':');
+    if (NULL == arg ||
+        '\0' == arg[0]) {
+        // no source, use defaults
+        strncpy(source->spec, "localhost:" DEFAULT_GPSD_PORT,
+                sizeof(source->spec));
+        return;
+    }
+    // else
+    // grab a copy
+    strncpy(source->spec, arg, sizeof(source->spec));
 
-        if (colon1 != NULL) {
-            char *colon2;
-            *colon1 = '\0';
-            if (colon1 != source->spec) {
-                source->server = source->spec;
-            }
-            if ('\0' != colon1[1] &&
-                ':' != colon1[1]) {
-                // override default only if there is a port string.
-                source->port = colon1 + 1;
-            }
-            colon2 = strchr(colon1 + 1, ':');
-            if (colon2 != NULL) {
-                *colon2 = '\0';
-                if ('\0' != colon2[1]) {
-                    // override default only if there is a device string.
-                    source->device = colon2 + 1;
-                }
-            }
-        } else if (strchr(source->spec, '/') != NULL) {
-            source->device = source->spec;
-        } else {
-            source->server = source->spec;
-        }
+    if ('/' == source->spec[0]) {
+        // it is a bare device
+        source->device = source->spec;
+        return;
     }
 
-    if ('[' == *source->server) {
-        char *rbrk = strchr(source->server, ']');
-        ++source->server;
-        if (NULL != rbrk) {
-            *rbrk = '\0';
+    server = source->spec;
+    skipto = server;
+    if ('[' == *skipto &&
+        NULL != (rbrk = strchr(skipto, ']'))) {
+        // We have an IPv6 literal as server
+        // remove []'s
+        server++;
+        *rbrk = '\0';
+        skipto = rbrk + 1;
+    }
+
+    // do we have a port?
+    colon1 = strchr(skipto, ':');
+    if (NULL == colon1) {
+        // No, it is a bare server
+        source->server = server;
+        return;
+    }
+
+    // we have a port
+    *colon1 = '\0';
+    if (colon1 != server) {
+        // and we have a server
+        source->server = server;
+    }
+    if ('\0' != colon1[1] &&
+        ':' != colon1[1]) {
+        // override default only if there is a port string.
+        source->port = colon1 + 1;
+    }
+    colon2 = strchr(colon1 + 1, ':');
+    if (NULL != colon2) {
+        *colon2 = '\0';
+        if ('\0' != colon2[1]) {
+            // override default only if there is a device string.
+            source->device = colon2 + 1;
         }
     }
 }
