@@ -3,6 +3,7 @@
 3.24.1~dev: unreleased
   Have ubxtool "-w 0" run forever.
   Bump libgps version to 30.0
+  Change fixsource_t, store server locally, make pointers const.
 
 3.24: 2022-04-22
   NTRIP 2.0 now works.  But still only plain HTML, not RTP, etc.
